# Selftest_code_Firmware

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
IO_selftest/: CMakeLists.txt  selftest.c  serial.c  spi_slave.c
IO_selftest/include/: selftest.h  serial.h  spi_slave.h  userconfig.h.in
documentation/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000002_000000.html  dir_000002_000003.html  dir_000003_000000.html  dir_000003_000002.html  dir_6021115fc38b73254af000ed37195ec0.html  dir_6021115fc38b73254af000ed37195ec0.js  dir_6021115fc38b73254af000ed37195ec0_dep.map  dir_6021115fc38b73254af000ed37195ec0_dep.md5  dir_6bdf4ab7bc1c8f497e1cb193f1bd2a59.html  dir_6bdf4ab7bc1c8f497e1cb193f1bd2a59.js  dir_6bdf4ab7bc1c8f497e1cb193f1bd2a59_dep.map  dir_6bdf4ab7bc1c8f497e1cb193f1bd2a59_dep.md5  dir_8110339cd73e1a6c38acced3a8aaa629.html  dir_8110339cd73e1a6c38acced3a8aaa629.js  dir_8110339cd73e1a6c38acced3a8aaa629_dep.map  dir_8110339cd73e1a6c38acced3a8aaa629_dep.md5  dir_afb27abe78982cb83f776f8db4e2f64a.html  dir_afb27abe78982cb83f776f8db4e2f64a.js  dir_afb27abe78982cb83f776f8db4e2f64a_dep.map  dir_afb27abe78982cb83f776f8db4e2f64a_dep.md5  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  i2c__fifo_8h.html  i2c__fifo_8h__dep__incl.map  i2c__fifo_8h__dep__incl.md5  i2c__fifo_8h__incl.map  (+74 more)
documentation/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  (+25 more)
documentation/doxygen/latex/: annotated.tex  files.tex  i2c__fifo_8h.tex  i2c__fifo_8h__dep__incl.md5  i2c__fifo_8h__incl.md5  i2c__fifo_8h_source.tex  i2c__slave_8h.tex  i2c__slave_8h__dep__incl.md5  i2c__slave_8h__incl.md5  i2c__slave_8h_source.tex  md_README.tex  refman.tex  selftest_8c.tex  selftest_8c__incl.md5  selftest_8h.tex  selftest_8h__dep__incl.md5  selftest_8h__incl.md5  selftest_8h_source.tex  serial_8c.tex  serial_8c__incl.md5  serial_8h.tex  serial_8h__dep__incl.md5  serial_8h_source.tex  spi__slave_8c.tex  spi__slave_8c__incl.md5  spi__slave_8h.tex  spi__slave_8h__dep__incl.md5  spi__slave_8h_source.tex  structMESSAGE.tex  structcfgspi.tex  structcfgu.tex  structhex2__t.tex  structhex4__t.tex  structi2c__slave__t.tex  unionspi__stc.tex  unionspi__stc__coll__graph.md5  unionspistc.tex  unionspistc__coll__graph.md5  unionuartc.tex  unionuartc__coll__graph.md5
i2c_slave/: i2c_slave.c
i2c_slave/include/: i2c_fifo.h  i2c_slave.h
